Creacion del formulario

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Formulario Tarea</title>
 </head>
 <body>
-    
+    <form action="">
+        <label for="name">Nombre:</label>
+        <input type="text" name="name" id="name">
+        <label for="email">Nombre:</label>
+        <input type="email" email="email" id="email">
+        <label for="password">Nombre:</label>
+        <input type="password" password="password" id="password">
+        <label for="password-confirmation">Nombre:</label>
+        <input type="password" password-confirmation="password-confirmation" id="password-confirmation">
+        <button type="sumbit">Registrarse</button>
+    </form>
 </body>
 </html>
