--- a/index.html
+++ b/index.html
@@ -4,19 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Formulario Tarea</title>
 </head>
-<body>
-    <form action="">
-        <label for="name">Nombre:</label>
-        <input type="text" name="name" id="name">
-        <label for="email">Nombre:</label>
-        <input type="email" email="email" id="email">
-        <label for="password">Nombre:</label>
-        <input type="password" password="password" id="password">
-        <label for="password-confirmation">Nombre:</label>
-        <input type="password" password-confirmation="password-confirmation" id="password-confirmation">
-        <button type="sumbit">Registrarse</button>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+
+    <form action="" class="bg-white shadow-md rounded-lg px-8 pt-6 pb-8 mb-4 w-full max-w-lg">
+        <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Registro</h2>
+        
+        <div class="mb-4">
+            <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Nombre:</label>
+            <input type="text" name="name" id="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-blue-300">
+        </div>
+
+        <div class="mb-4">
+            <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Correo Electrónico:</label>
+            <input type="email" name="email" id="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-blue-300">
+        </div>
+
+        <div class="mb-4">
+            <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Contraseña:</label>
+            <input type="password" name="password" id="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-blue-300">
+        </div>
+
+        <div class="mb-6">
+            <label for="password-confirmation" class="block text-gray-700 text-sm font-bold mb-2">Confirmar Contraseña:</label>
+            <input type="password" name="password-confirmation" id="password-confirmation" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring focus:ring-blue-300">
+        </div>
+
+        <div class="flex justify-center ">
+            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline ">
+                Registrarse
+            </button>
+        </div>
     </form>
+
 </body>
 </html>
